fix text alignment and font name

--- a/public/stylesheets/sketchy.css
+++ b/public/stylesheets/sketchy.css
@@ -2,7 +2,7 @@
 body { background: url(/images/background.jpg); }
 
 body, input, select { 
-  font: 100%/1 chalkboard, "comic sans", sans-serif; 
+  font: 100%/1 chalkboard, "Comic Sans MS", sans-serif; 
   color: #333;
 }
 
@@ -31,6 +31,7 @@ input[type=checkbox], input[type=radio] {
   margin: 0;
   height: 20px;
   width: 20px;
+  vertical-align: middle;
 }
 
 input[type=checkbox] { background-image: url(/images/checkbox.png); }
